# Website-Manager

./: README.md  license.txt  pyproject.toml
.github/workflows/: ci.yml
website_manager/: hooks.py  modules.txt
website_manager/website_manager/doctype/blog_classification/: blog_classification.js  blog_classification.json  blog_classification.py  test_blog_classification.py
website_manager/website_manager/doctype/blog_entry/: blog_entry.js  blog_entry.json  blog_entry.py  test_blog_entry.py
website_manager/website_manager/doctype/contact_details_settings/: contact_details_settings.js  contact_details_settings.json  contact_details_settings.py  test_contact_details_settings.py
website_manager/website_manager/doctype/contact_form/: contact_form.js  contact_form.json  contact_form.py  test_contact_form.py
website_manager/website_manager/doctype/esteemed_customers/: esteemed_customers.js  esteemed_customers.json  esteemed_customers.py  test_esteemed_customers.py
website_manager/website_manager/doctype/event_settings/: event_settings.js  event_settings.json  event_settings.py  test_event_settings.py
website_manager/website_manager/doctype/event_type/: event_type.js  event_type.json  event_type.py  test_event_type.py
website_manager/website_manager/doctype/knowledge_base_entry/: knowledge_base_entry.js  knowledge_base_entry.json  knowledge_base_entry.py  test_knowledge_base_entry.py
website_manager/website_manager/doctype/organization_details/: organization_details.js  organization_details.json  organization_details.py  test_organization_details.py
(+21 files in other folders)
